--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -139,7 +139,10 @@ html {
 	}
 }
 .article-author-top {
-	display: none;
+	display: block;
+	.grid(12,2);
+	.prefix(12,0.5);
+	.suffix(12,0.5);
 }
 .article-author-bottom {
 	.bio-photo {
