--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -136,6 +136,11 @@ html {
 	}
 	img.bio-photo {
 		.rounded(100px);
+		max-width: 150px;
+		width: 100%;
+		height: auto;
+		display: block;
+		margin: 0 auto;
 	}
 }
 .article-author-top {
