--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -117,6 +117,14 @@ html {
 	h3 {
 		.delta();
 	}
+	.profile-photo-right {
+		float: right;
+		margin: 0 0 1em 1.5em;
+		max-width: 250px;
+		width: auto;
+		height: auto;
+		border-radius: 8px;
+	}
 }
 .byline {
 	clear: both;
