--- a/assets/less/600.less
+++ b/assets/less/600.less
@@ -43,6 +43,9 @@ html {
 	.grid(12,2);
 	.prefix(12,0.5);
 	.suffix(12,0.5);
+	width: 14%;
+	margin-left: 2%;
+	margin-right: 2%;
 }
 .article-author-bottom {
 	display: none;
