--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -144,7 +144,7 @@ html {
 	}
 	img.bio-photo {
 		.rounded(100px);
-		max-width: 150px;
+		max-width: 120px;
 		width: 100%;
 		height: auto;
 		display: block;
@@ -156,6 +156,9 @@ html {
 	.grid(12,2);
 	.prefix(12,0.5);
 	.suffix(12,0.5);
+	width: 14%;
+	margin-left: 2%;
+	margin-right: 2%;
 }
 .article-author-bottom {
 	.bio-photo {
