--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,6 @@
 <div class="navigation-wrapper">
 	<div class="site-name">
+		<img src="{{ site.url }}/assets/images/{{ site.owner.avatar }}" class="header-photo" alt="{{ site.owner.name }}">
 		<a href="{{ site.url }}">{{ site.title }}</a>
 	</div><!-- /.site-name -->
   {% capture url %}{{ page.url | remove:'index.html' }}{% endcapture %}
