--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -17,6 +17,19 @@ html {
 	.prefix(12,1);
 	.suffix(12,1);
 	margin-bottom: 1em;
+	display: flex;
+	align-items: center;
+	gap: 1em;
+	.header-photo {
+		width: 60px;
+		height: 60px;
+		border-radius: 50%;
+		object-fit: cover;
+		flex-shrink: 0;
+	}
+	a {
+		text-decoration: none;
+	}
 }
 .top-navigation {
 	.container();
