--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -17,16 +17,6 @@ html {
 	.prefix(12,1);
 	.suffix(12,1);
 	margin-bottom: 1em;
-	display: flex;
-	align-items: center;
-	gap: 1em;
-	.header-photo {
-		width: 60px;
-		height: 60px;
-		border-radius: 50%;
-		object-fit: cover;
-		flex-shrink: 0;
-	}
 	a {
 		text-decoration: none;
 	}
@@ -37,12 +27,23 @@ html {
 	.prefix(12,1);
 	.suffix(12,1);
 	margin-bottom: 1em;
-}
-.top-navigation {
+	display: flex;
+	align-items: center;
+	gap: 1em;
+	.menu-photo {
+		width: 50px;
+		height: 50px;
+		border-radius: 50%;
+		object-fit: cover;
+		flex-shrink: 0;
+	}
 	ul {
 		list-style: none;
 		margin: 0;
 		padding: 0;
+		display: flex;
+		align-items: center;
+		gap: 0;
 	}
 	li {
 		list-style-type: none;
