--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -156,10 +156,10 @@ html {
 	display: block;
 	.grid(12,1);
 	.prefix(12,0.5);
-	.suffix(12,0.5);
-	width: 14%;
-	margin-left: 2%;
-	margin-right: 2%;
+	.suffix(12,0);
+	width: 12%;
+	margin-left: 0;
+	margin-right: 0;
 }
 .article-author-bottom {
 	.bio-photo {
