--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -121,7 +121,7 @@ html {
 	.profile-photo-right {
 		float: right;
 		margin: 0 0 1em 1em;
-		max-width: 450px;
+		max-width: 300px;
 		width: auto;
 		height: auto;
 		border-radius: 8px;
@@ -145,7 +145,7 @@ html {
 	}
 	img.bio-photo {
 		.rounded(100px);
-		max-width: 120px;
+		max-width: 100px;
 		width: 100%;
 		height: auto;
 		display: block;
@@ -157,8 +157,8 @@ html {
 	.grid(12,1);
 	.prefix(12,0.5);
 	.suffix(12,0);
-	width: 12%;
-	margin-left: 0;
+	width: 10%;
+	margin-left: -1%;
 	margin-right: 0;
 }
 .article-author-bottom {
