--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -275,13 +275,13 @@ html{background-color:#ffffff;font-family:'PT Serif',serif;font-color:#333332;fo
 .headline-wrap h2{font-size:24px;font-size:1.3333333333333333rem;margin-bottom:1.2375rem;text-transform:uppercase;}
 .article-wrap h2{font-size:36px;font-size:2rem;margin-bottom:0.825rem;}
 .article-wrap h3{font-size:24px;font-size:1.3333333333333333rem;margin-bottom:1.2375rem;}
-.article-wrap .profile-photo-right{float:right;margin:0 0 1em 1em;max-width:450px;width:auto;height:auto;-webkit-border-radius:8px;-moz-border-radius:8px;border-radius:8px;}
+.article-wrap .profile-photo-right{float:right;margin:0 0 1em 1em;max-width:300px;width:auto;height:auto;-webkit-border-radius:8px;-moz-border-radius:8px;border-radius:8px;}
 .byline{clear:both;font-size:80%;}
 .article-author-top h4,.article-author-bottom h4{margin-bottom:0.5em;}
 .article-author-top p,.article-author-bottom p{font-size:80%;font-style:italic;}
 .article-author-top a,.article-author-bottom a,.article-author-top a:hover,.article-author-bottom a:hover{border-bottom:0 solid transparent;}
-.article-author-top img.bio-photo,.article-author-bottom img.bio-photo{-webkit-border-radius:100px;-moz-border-radius:100px;border-radius:100px;max-width:120px;width:100%;height:auto;display:block;margin:0 auto;}
-.article-author-top{display:block;display:inline;float:left;width:14%;margin-left:2%;margin-right:2%;}
+.article-author-top img.bio-photo,.article-author-bottom img.bio-photo{-webkit-border-radius:100px;-moz-border-radius:100px;border-radius:100px;max-width:100px;width:100%;height:auto;display:block;margin:0 auto;}
+.article-author-top{display:block;display:inline;float:left;width:10%;margin-left:-1%;margin-right:0;}
 .article-author-bottom .bio-photo{float:left;margin-right:25px;}
 .toc{display:none;font-size:95%;-webkit-opacity:0.7;-moz-opacity:0.7;opacity:0.7;-webkit-transition:opacity 0.2s ease-in-out;-moz-transition:opacity 0.2s ease-in-out;-ms-transition:opacity 0.2s ease-in-out;-o-transition:opacity 0.2s ease-in-out;transition:opacity 0.2s ease-in-out;}.toc:hover{-webkit-opacity:1;-moz-opacity:1;opacity:1;}
 .toc header{background:#1a1a1a;}
