--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -118,6 +118,15 @@ html {
 	h3 {
 		.delta();
 	}
+	p {
+		& + p {
+			text-indent: 1.5em;
+			margin-top: -1.5em;
+		}
+		&:first-of-type {
+			text-indent: 0;
+		}
+	}
 	.profile-photo-right {
 		float: right;
 		margin: 0 0 1em 1em;
