--- a/assets/less/600.less
+++ b/assets/less/600.less
@@ -42,10 +42,10 @@ html {
 	display: block;
 	.grid(12,2);
 	.prefix(12,0.5);
-	.suffix(12,0.5);
-	width: 14%;
-	margin-left: 2%;
-	margin-right: 2%;
+	.suffix(12,0);
+	width: 10%;
+	margin-left: -1%;
+	margin-right: 0;
 }
 .article-author-bottom {
 	display: none;
