--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -117,6 +117,15 @@ html {
 	h3 {
 		.delta();
 	}
+	img.floatpic {
+		float: right;
+		margin-left: 1em;
+		margin-top: -20px;
+		max-width: 320px;
+		width: auto;
+		height: auto;
+		border-radius: 8px;
+	}
 }
 .byline {
 	clear: both;
