--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -145,10 +145,14 @@ html {
 	}
 	img.bio-photo {
 		.rounded(100px);
+		width: 100%;
+		height: auto;
+		display: block;
+		margin: 0 auto;
 	}
 }
 .article-author-top {
-	display: none;
+	display: block;
 }
 .article-author-bottom {
 	.bio-photo {
