--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -146,7 +146,7 @@ html {
 	img.bio-photo {
 		.rounded(100px);
 		max-width: 100px;
-		width: 100%;
+		width: auto;
 		height: auto;
 		display: block;
 		margin: 0 auto;
