--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -149,7 +149,7 @@ html {
 		width: auto;
 		height: auto;
 		display: block;
-		margin: 0 auto;
+		margin: 0 auto 0 -10px;
 	}
 }
 .article-author-top {
